# pascal-parser-rs

./: Cargo.toml  README.md  build.rs
src/: ast.rs  lib.rs  main.rs  pascal.lalrpop
tests/: tests.rs
tests/test_files/: fun1.pas  fun2.pas  fun3.pas  fun4.pas  fun5.pas  sem1.pas  sem2.pas  sem3.pas  sem4.pas  sem5.pas  testb.pas  testc.pas  testd.pas  teste.pas  testf.pas  testg.pas  testh.pas  testi.pas  testj.pas  testk.pas  testl.pas  testm.pas  testn.pas  testo.pas  testok1.pas  testok2.pas  testok3.pas  testok4.pas  testok5.pas  testok6.pas  testok7.pas  testp.pas  testq.pas  testr.pas  tests.pas  testt.pas  testu.pas  testv.pas  testw.pas  testx.pas  (+2 more)
