# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "pascal_parser_rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
derive_more = "0.99.17"
lalrpop-util = { version = "0.19.9", features = ["lexer"] }
regex = "1.7.3"

[build-dependencies]
lalrpop = "0.19.9"


